--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: lightblue;
     font-family: Verdana;
 }  
 #content {
-    background: lightyellow;
+    background: lightred;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
@@ -30,21 +30,20 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
+        <h1>Danny Kearns</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a freshman at Bob Jones University studying Business administration. I work for Chipotle.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I attend Palmetto Baptist Church in Piedmont SC. My favorite website is  
+            <a href="https://www.espn.com/">here</a>, and you can email me  
+            <a href="mailto:dkear566@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I  love listening to music and playing sports.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Business Administration<br />
         Bob Jones University
     </div>
 </body>
